# sequel-investments

./: .env  .replit  README.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
.idx/: dev.nix
attached_assets/: Easy_Street_-_Scope_of_Work_Template_1765261899545.xlsx  Pasted--Admin-Analytics-Page-Enhancement-Implementation-Guide-_1765850605038.txt  Pasted--Dashboard-Grid-Layout-Implementation-Guide-Overview-Th_1765852127618.txt  Pasted--Portfolio-Concentration-Map-Tooltip-Enhancement-Specif_1765902204850.txt  Pasted--Premium-Templates-Customize-Site-Pages-Integration-Pla_1765844250543.txt  Pasted--Premium-Templates-Implementation-Specification-Overvie_1765833678422.txt  Pasted--Section-Style-Variants-for-Premium-Templates-This-docu_1765840705231.txt  Pasted--Upcrunch-Design-System-Overview-Modern-clean-lending-p_1765837688190.txt  Pasted-Here-s-a-comprehensive-plan-for-implementing-a-customiz_1765852575406.txt  Pasted-I-ll-help-you-plan-out-a-dynamic-loan-products-manageme_1765819876420.txt  Pasted-Thank-you-for-contacting-Easy-Street-Capital-I-d-like-t_1764815286797.txt  Riley Bishop December 2025 Commission Report_1764114581813.xlsx  Riley Bishop November 2025 Commission Report_1764114581812.xlsx  Riley Bishop October 2025 Commission Report_1764114581814.xlsx  branding-1765833819527.json  branding-1765835958982.json  branding-1765836867618.json  city_geocodes_1765906442858.csv
client/: index.html
scripts/: generate_state_boundaries.py  generate_state_maps.py  seed-simulation.ts
server/: email-templates.ts  (+13 more)
(+211 files in other folders)
